--- a/package.json
+++ b/package.json
@@ -1,13 +1,24 @@
 {
-  "name": "expressExampleTest",
-  "description": "example application with functional testing expressjs",
+  "name": "Franciszkanska",
+  "description": "Dynamic IP service. Client + server. ",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
     "express": "4.x",
+    "mongodb": "^1.4.22",
+    "path": "^0.4.9"
+  },
+  "devDependencies": {
+    "chai": "^1.9.2",
     "grunt": "^0.4.5",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-mocha-test": "^0.11.0",
-    "mocha": "^1.21.3"
+    "sinon": "^1.11.1"
+  },
+  "scripts": {
+    "start": "node app/run.js"
+  },
+  "engines": {
+    "node": "0.10.32"
   }
 }
